now i add styles

--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Omlet Recipe</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <section>
+        <img src="assets/images/image-omelette.jpeg" alt="" />
+        <h1>Simple Omelette Recipe</h1>
+        <p>
+          An easy and quic dish, perfect for any meal. This classic omelette
+          combines beaten eggs cooked to perfection, optionally filled with your
+          choice pf cheese, vegetables, or meats.
+        </p>
+        <div class="preparation-time">
+          <h3>Preparation time</h3>
+          <ul>
+            <li><b>Total:</b> Approximately 10 minutes</li>
+            <li><b>Preparation:</b> 5 minutes</li>
+            <li><b>Cooking:</b> 5 minutes</li>
+          </ul>
+        </div>
+        <h2>Ingredients</h2>
+        <ul>
+          <li>Lorem, ipsum dolor.</li>
+          <li>Lorem, ipsum dolor.</li>
+          <li>Lorem, ipsum dolor.</li>
+          <li>Lorem ipsum dolor sit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+        </ul>
+        <hr />
+        <h2>Instructions</h2>
+        <ol>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fuga
+            perferendis quas quibusdam est unde inventore explicabo provident
+            quidem omnis.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fuga
+            perferendis quas quibusdam est unde inventore explicabo provident
+            quidem omnis.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fuga
+            perferendis quas quibusdam est unde inventore explicabo provident
+            quidem omnis.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fuga
+            perferendis quas quibusdam est unde inventore explicabo provident
+            quidem omnis.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fuga
+            perferendis quas quibusdam est unde inventore explicabo provident
+            quidem omnis.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, fuga
+            perferendis quas quibusdam est unde inventore explicabo provident
+            quidem omnis.
+          </li>
+        </ol>
+        <hr />
+        <h2>Nutrition</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora
+          illum omnis iste obcaecati soluta quae!
+        </p>
+        <div>
+          <h4>Calories</h4>
+          <span>277kcal</span>
+        </div>
+        <hr />
+        <div>
+          <h4>Carbs</h4>
+          <span>0g</span>
+        </div>
+        <hr />
+        <div>
+          <h4>Protein</h4>
+          <span>20g</span>
+        </div>
+        <hr />
+        <div>
+          <h4>Fat</h4>
+          <span>22g</span>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
